# coffee_shop

./: Dockerfile  docker-compose.yaml  pyproject.toml
coffee_shop/: main.py
coffee_shop/core/: db.py  setup.py
coffee_shop/items/: models.py  repositories.py
coffee_shop/orders/: models.py
coffee_shop/security/: dependencies.py  routers.py  schemas.py  services.py
coffee_shop/users/: models.py  repositories.py  routers.py  schemas.py  services.py
db/: postmaster.pid
db/base/1/: 2619  2619_fsm  2696  2840  2840_fsm  2841
db/base/16384/: 1247  1249  1249_fsm  1259  16387  16388  16396  16397  16399  2224  2579  2604  2606  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db/base/4/: 2619
db/global/: 1260  1262  2671  pg_control  pg_internal.init
